--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -35,7 +35,7 @@ $font-family-sans-serif: "Roboto", sans-serif;
   background: white;
 }
 
-.textarea {
+textarea {
   height: 100px;
   max-height: 100px;
   min-height: 100px;
